# terminator

./: .gitattributes  .gitignore  .pr-body.md  ADVANCED_DX_PROPOSAL.md  CACHE_IMPLEMENTATION_PROPOSAL.md  CHANGELOG.md  CLAUDE.md  CONFIG_FORMAT_ANALYSIS.md  CONTRIBUTING.md  Cargo.toml  CUsersscreenpipe-windowsAppDataLocalTempbuild_output.txt  IDEAS.md  IMPLEMENTATION_COMPLETE.md  JS_TS_WORKFLOW_INTEGRATION.md  LICENSE  README.md  RECOVERY_INSTRUCTIONS.md  RMCP_MIGRATION_0.6.3.md  TESTING_PLAN.md  TEST_RESULTS.md  TYPESCRIPT_WORKFLOWS.md  TYPESCRIPT_WORKFLOW_EXPLORATION.md  TYPESCRIPT_WORKFLOW_PROPOSAL.md  VIRTUAL_DRIVER_README.md  add_all_telemetry.py  add_basic_telemetry_all_tools.py  add_comprehensive_telemetry.py  add_operation_timing.py  add_telemetry.py  add_telemetry_all_functions.py  add_telemetry_remaining_tools.py  batch_add_telemetry.py  bridge_monitor.py  build-and-deploy.ps1  ci-fix.patch  comprehensive_workflow_recording.json  final_cleanup_telemetry.py  final_telemetry_fixes.py  fix_more_telemetry_fields.py  fix_telemetry_fields.py  (+22 more)
bindings/nodejs/: Cargo.toml  README.md  cursor_example.js  dump_app_tree.js  extract_final.js  index.d.ts  index.js  node_example.js  package-lock.json  package.json  test-tree.js  wrapper.js
bindings/python/: Cargo.toml  pyproject.toml  terminator.pyi  test_tree.py
crates/terminator-mcp-agent/: .gitignore  .npmignore  Cargo.toml  README.md  build.rs  config.js  index.js  package.json
terminator/: Cargo.toml  build.rs
terminator-ai-summarizer/: Cargo.toml
terminator-ai-summarizer/src/: client.rs  lib.rs  main.rs  ollama.rs  utils.rs
terminator-cli/: Cargo.toml  README.md  README_AZURE.md
terminator-cli/src/: azure.rs  azure_deploy.json  main.rs  mcp_client.rs  mcp_stdio.rs  telemetry_receiver.rs  typescript_workflow.rs  workflow_result.rs  workflow_validator.rs
terminator-mcp-agent/: Cargo.toml  README.md  build.rs  index.js  install.ps1  move-binary.js  package-lock.json  package.json  sync-version.js
terminator-mcp-agent/examples/: test_telemetry.rs
terminator-mcp-agent/src/: README_sse.md  cancellation.rs  duration_parser.rs  event_bus.rs  expression_eval.rs  helpers.rs  lib.rs  log_capture.rs  main.rs  mcp_converter.rs  mcp_types.rs  output_parser.rs  prompt.rs  scripting_engine.rs  sentry.rs  server.rs  server_sequence.rs  server_workflow_files.rs  telemetry.rs  terminator_js.rs  tree_formatter.rs  utils.rs  vcredist_check.rs  workflow_converter.rs  workflow_events.rs  workflow_format.rs  workflow_typescript.rs
terminator-mcp-agent/tests/: ACCURACY_TESTING_SUMMARY.md  ENHANCED_WORKFLOWS_SUMMARY.md  README_ACCURACY_TESTING.md  SIMPLIFIED_ACCURACY_FRAMEWORK.md  accuracy_test_runner.rs  activate_element_integration_test.rs  chrome_roles_investigation.rs  clean_accuracy_runner.rs  common.rs  debug_window_detection.rs  execute_sequence_benchmark.rs  expression_eval_tests.rs  helpers_test.rs  import_workflow_test.rs  integration_tests.rs  json_serialization_test.rs  mcp_client_tests.rs  mock_accuracy_test.rs  mock_workflow_runner.rs  run_javascript_tests.rs  simple_accuracy_test.rs  telemetry_tests.rs  test-otel-integration.js  test_click_first_search.rs  test_i94_website_search_click.rs  test_js_engine.rs  test_output_parser_compat.rs  test_scripts_base_path.rs  test_simplified_fields.rs  unit_tests.rs  workflow_accuracy_tests.rs  workflow_definitions.rs
terminator-mcp-agent/utils/: build-server.js  generate-links.js  sync-version.js  update-badges.js
terminator-recorder-server/: Cargo.toml  README.md
terminator-recorder-server/src/: api.rs  highlighting.rs  main.rs  recorder_manager.rs  types.rs  websocket.rs
terminator-workflow-recorder/: Cargo.toml  README.md
terminator-workflow-recorder/examples/: debug_mcp_recording.rs  double_click_demo.rs  mcp_double_click_test.rs  record_workflow.rs  simple_cpu_recorder.rs  test_alt_tab.rs  test_chrome_fix.rs  test_dom_capture_simple.rs  test_fast_activation.rs  test_new_fields.rs  test_ui_elements.rs  text_input_completion_demo.rs
terminator-workflow-recorder/src/: events.rs  lib.rs  mcp_converter.rs  recorder.rs
terminator-workflow-recorder/tests/: alt_tab_automation_test.rs  browser_integration_test.rs  double_click_integration_test.rs  integration_test.rs  text_input_integration_test.rs  text_input_tracker_test.rs  unified_latency_benchmark.rs  unit_test.rs
terminator/browser-extension/: build_check.json  content.js  install_chrome_extension.yml  install_chrome_extension_ui.yml  manifest.json  worker.js
terminator/examples/: advanced_cron_example.yml  advanced_window_targeting.rs  amazon_country_highlight.rs  azure_vm_deployment.rs  benchmark_example.rs  cron_example.yml  cursor_example.rs  element_ocr_demo.rs  fast_hover_highlight.rs  get_all_applications_tree.rs  github_scroll_highlight.rs  highlight_test.rs  hover_highlight_test.rs  lightweight_browser_automation.rs  list_processes_and_windows.rs  monitor_management.rs  name_with_role.rs  near.rs  print_accessibility_tree.rs  serialize_deserialize_element.rs  serialize_element.rs  simple_dataiku_extraction.rs  simple_process_list.rs  smart_deserialize.rs  test_browser_script.rs  test_browser_script_fixed.rs  uielement_deserialize.rs  virtual_display_test.rs  visibility_filter.rs  webview2_script_example.rs  zoom_demo.rs
terminator/src/: browser_script.rs  element.rs  errors.rs  extension_bridge.rs  health.rs  lib.rs  locator.rs  selector.rs  tree_formatter.rs  types.rs
terminator/tests/: browser_script_basic_test.rs  browser_script_debug_test.rs  browser_script_execution_test.rs  browser_script_integration_test.rs  cdp_integration_test.rs  click_timing_regression_test.rs  click_timing_test_page.html  dataiku_form_integration_test.rs  div_extraction_test.rs  element_extraction_test.rs  execute_script_server_loop_test.rs  extension_bridge_test.rs  js_execution_test.rs  nth_selector_test.rs  open_app.rs  open_url.rs  open_url_unit_tests.rs  path_test.rs  simple_browser_script_test.rs  simple_execute_script_test.rs  wait_tests.rs  webview2_complete_test.rs  webview2_end_to_end_test.rs  webview2_tests.rs  (+5 more)
(+473 files in other folders)
