[package]
name = "terminator-ai-summarizer"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
terminator = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.5.4", features = ["derive"] }
terminator-mcp-agent = { path = "../terminator-mcp-agent" }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "b9d7d61ebd6e8385cbc4aa105d4e25774fc1a59c", features = [
    "client",
    "transport-child-process",
] }
ollama-rs = "0.3.2"
arboard = "3.6.0"
rdev = "0.5.3"
