[package]
name = "terminator-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "terminator"
path = "src/main.rs"

[[bin]]
name = "cargo-terminator"
path = "src/bin/cargo-terminator.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "process",
    "full",
] }
anyhow = "1.0"

rmcp = { version = "0.6.3", features = [
    "transport-child-process",
    "client",
    "transport-streamable-http-client-reqwest",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"


dotenvy = "0.15.7"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }

anthropic-sdk = "0.1.5"

# Cron scheduling support
tokio-cron-scheduler = "0.14"
chrono = { version = "0.4", features = ["serde"] }

# Display formatting
colored = "3.0.0"

# Simple HTTP server for receiving telemetry
axum = "0.7"
bytes = "1.5"

# Protobuf support for parsing OTLP data
prost = "0.13"
opentelemetry-proto = "0.27"
