[package]
name = "terminator-mcp-agent"
version.workspace = true
edition.workspace = true

[lib]
name = "terminator_mcp_agent"
path = "src/lib.rs"

[[bin]]
name = "terminator-mcp-agent"
path = "src/main.rs"

[[bin]]
name = "gist-executor"
path = "src/bin/gist_executor.rs"

[dependencies]
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
terminator = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "b9d7d61ebd6e8385cbc4aa105d4e25774fc1a59c", features = [
    "server",
    "client",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
    "transport-child-process",
] }
futures = "0.3"
image = { version = "0.25.1", features = ["png"] }
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
axum = "0.8"
terminator-workflow-recorder = { path = "../terminator-workflow-recorder" }
jsonpath_lib = "0.3.0"
regex = { workspace = true }

boa_engine = "0.20.0"
tempfile = "3"

reqwest = { version = "0.12.5", features = ["json"] }

# YAML parsing support
serde_yaml = "0.9"

# Dependencies for AI summarizer binary - TODO add behind feature flag
ollama-rs = "0.3.2"
arboard = "3.6.0"
rdev = "0.5.3"
which = "4"

[dev-dependencies]
tokio-test = "0.4"
rand = "0.8"

[[example]]
name = "terminator-ai-summarizer"
path = "examples/terminator-ai-summarizer/src/main.rs"

[[bin]]
name = "ai-summarizer"                                 # Your custom CLI name here
path = "examples/terminator-ai-summarizer/src/main.rs"
