[package]
name = "terminator-recorder-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "terminator-recorder-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
terminator = { workspace = true }
terminator-workflow-recorder = { path = "../terminator-workflow-recorder" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async utilities
futures = "0.3"

# Additional dependencies
uuid = { version = "1.10", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
