[package]
name = "terminator-node-bindings"
version.workspace = true
edition.workspace = true

[lib]
name = "terminator_node_bindings"
crate-type = ["cdylib"]

[dependencies]
# NAPI for Node.js bindings
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.2"
terminator = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2.0.1"